Fixed avatar badge distortion on smaller screen widths for Artwork page by setting flex-shrink to 0, also added media queries for mobile responsiveness

--- a/client/src/components/views/artwork-view/ArtworkView.css
+++ b/client/src/components/views/artwork-view/ArtworkView.css
@@ -4,3 +4,9 @@
     max-width: var(--wrapper-max-width);
     width: var(--wrapper-width);
 }
+
+@media screen and (max-width: 32em) {
+    .artwork-view {
+        padding: 0;
+    }
+}
